# Atmospheric-and-radivative-transfer-suite

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  codecov.yml  pyproject.toml
MDNO/: README.md
MDNO/mdno_rtno/: OPTIMIZATION_CHANGELOG.md  README.md  README_AUDIT.md  __init__.py  api.py  deploy.sh  k8s.yaml  mdno_v53.py  pre_deploy_validation.sh  requirements.txt  rtno_v43.py
MDNO/mdno_rtno/mdno/: __init__.py  _logging.py  config.py  constants.py  demo.py  layers.py  model.py  monitoring.py  numerics.py  physics.py  trainer.py  validation.py
MDNO/mdno_rtno/physics/: __init__.py
MDNO/mdno_rtno/rtno/: __init__.py  _logging.py  boundary.py  config.py  constants.py  demo.py  harmonics.py  model.py  monitoring.py  optics.py  polarization.py  refraction.py  scattering.py  solver.py  utils.py
MDNO/mdno_rtno/tests/: test_api.py  test_mdno.py  test_rtno.py
STRATUS/: README.md  pyproject.toml  requirements-dev.txt  stratus_refactored.py
STRATUS/stratus/: __init__.py  angular.py  benchmark.py  config.py  data.py  exceptions.py  export.py  model.py  monitoring.py  monte_carlo.py  multiscale.py  network.py  pinn.py  polarization.py  raymarch.py  validation.py
STRATUS/tests/: conftest.py  test_math_physics.py  test_model_integration.py  test_raymarch.py
adapters/: libradtran_labels.py  rrtmgp_labels.py
configs/recipes/: flux_closure_ceres.yaml  rt_scalar_era5_rrtmgp.yaml  rt_vector_cams_polder.yaml
docs/: data_schema.md
validators/: __init__.py  cf_schema.py  invariants.py
